--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -10,14 +10,14 @@
   display: none;
 }
 
-.phone-book {
+.list {
   margin: 0 auto;
   margin-bottom: 18px;
-  max-width: 900px;
+  max-width: 1200px;
   width: 100%;
   min-height: 60px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   &__item {
@@ -30,12 +30,28 @@
     padding-bottom: 8px;
   }
 }
-.header {
+.header-modal {
   width: 100%;
+  max-width: 1400px;
   margin-top: 22px;
-  margin-bottom: 22px;
+  margin-bottom: 40px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+.header {
+  &__wrapp {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1200px;
+  }
+  &__search {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
 }
 
 .contact {
@@ -48,7 +64,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    max-width: 200px;
+    min-width: 200px;
   }
   &__input {
     width: 100%;
@@ -71,6 +87,18 @@
   }
   &__compensator {
     width: 18px;
+  }
+}
+
+.form {
+  width: 100%;
+  max-width: 624px;
+  margin: 0 auto;
+  &__section {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 16px;
+    row-gap: 7px;
   }
 }
 
@@ -101,16 +129,15 @@
   }
 }
 
-.buttons {
+.button {
   &__wrapper {
-    display: flex;
-    justify-content: space-between;
-    max-width: 330px;
+    max-width: 40px;
     width: 100%;
   }
   &__wrapp {
     display: flex;
     justify-content: space-between;
+    margin-right: 30px;
   }
   &__download {
     margin-right: 8px;
