--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,3 +9,5 @@ $color-primary-plain-hover: #1E88E5BF;
 $color-primary-plain-focus: #1E88E519;
 $color-disabled: #37474F26;
 $disabled-text: #37474F7F;
+$red: #F44336;
+$el-color-red: #f56c6c;
